<resources>

    <string-array name="ticket_state">
        <item >open</item>
        <item >closed</item>
    </string-array>
    <string name="update_button">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="update_hint">Updated Info</string>
    <string-array name="drawer_list">
        <item >Tech Order Summary</item>
        <item >Dispose Equipment</item>
        <item >Inventory</item>
        <item >Settings</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="welcome">Obion County Schools Ticket Tracker</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="remember_me_text">Remember Me</string>
    <string name="preference_network_category">Network Settings</string>
    <string-array name="ipaddress_label">
        <item >Internal</item>
        <item >External</item>
    </string-array>
    <string-array name="ipaddresses">
        <item >10.99.0.26</item>
        <item >96.4.160.69</item>
    </string-array>
    <string name="ip_address_preference_title">IP Address</string>
    <string name="ip_address_preference_summary">Set the IP address for on or off the network</string>
    <string name="settings_menu_title">Settings</string>
    <string name="preference_display_update">Auto Update</string>
    <string name="preference_theme_summary_on">Light text on a dark background</string>
    <string name="preference_theme_summary_off">Dark text on a light background</string>
    <string name="preference_theme_switch_on">On</string>
    <string name="preference_theme_title">Low Light</string>
    <string name="preference_theme_switch_off">Off</string>
    <string name="dispose_tag_hint">Tag #</string>
    <string name="date_pick_button">Change Date</string>
    <string name="dispose_info_text">Dispose Information</string>
    <string name="dispose_submit_button">Submit</string>
    <string name="e_waste">E-Waste</string>
    <string-array name="schools">
        <item >Select A School</item>
        <item >Obion County Schools</item>
        <item >Black Oak Elementary</item>
        <item >Hillcrest Elementary</item>
        <item >Obion County Central High</item>
        <item >Lake Road Elementary</item>
        <item >Ridgemont Elementary</item>
        <item >South Fulton Elementary</item>
        <item >South Fulton Middle/High</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="auto_update_setting_title">Auto-update</string>
    <string name="auto_update_setting_summary">Automatically check for updates when the app starts up</string>
    <string name="cancel">Cancel</string>
    <string name="check_for_update_setting_title">Check for update</string>
    <string name="check_for_update_setting_summary">See if an update is available</string>
    <string name="checking_for_update">Checking for update...</string>
    <string name="ongoing_update">An update for GoIV is already being downloaded</string>
    <string name="techsummary">Tech Summary</string>
    <string name="dispose">Dispose Equipment</string>
    <string name="inventory">Inventory</string>
    <string name="settings">Settings</string>
    <string name="settings_page_title">Settings</string>
    <string name="update_check_failed">An error occured while checking for an update. Please check your internet connection</string>
    <string name="up_to_date">Your app is up-to-date</string>
    <string name="open_source_setting_title">Open source licenses</string>
    <string name="app_license_description">Small app that incorporates into the ticket website allowing users to track tickets, dispose equipment, and view inventory.</string>
    <string name="download_pdf">Download PDF</string>
    <string name="req_status_title">REQ Status</string>
    <string name="inventory_button_submit">Search</string>
    <string name="inventory_button_nothing_selected">Please Select a School</string>
</resources>