<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory android:title="@string/preference_display_category" android:key="pref_key_display_settings">
            <SwitchPreference
                android:summaryOff="@string/preference_theme_summary_off"
                android:title="@string/preference_theme_title"
                android:key="light_theme"
                android:switchTextOn="@string/preference_theme_switch_on"
                android:summaryOn="@string/preference_theme_summary_on"
                android:switchTextOff="@string/preference_theme_switch_off"
                android:defaultValue="false"/>

            <SwitchPreference
                android:key="autoUpdateEnabled"
                android:title="@string/auto_update_setting_title"
                android:summary="@string/auto_update_setting_summary"
                android:defaultValue="true"/>

            <Preference
                android:key="checkForUpdate"
                android:title="@string/check_for_update_setting_title"
                android:summary="@string/check_for_update_setting_summary" />

        </PreferenceCategory>
    </PreferenceScreen>
