<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="match_parent">
<ScrollView
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/scrollView1" >
		<RelativeLayout
		    android:paddingLeft="50dp"
			android:layout_width="match_parent"
			android:paddingRight="50dp"
			android:layout_height="wrap_content" 
			android:id="@+id/relativeLayout1">

			<TextView
			    android:id="@+id/welcomeText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:gravity="center"
			    android:paddingBottom="40dp"
			    android:paddingTop="40dp"
			    android:text="@string/welcome"
			    android:textSize="30sp"
				android:layout_alignParentTop="true"
				android:layout_alignParentStart="true"
				android:layout_marginTop="44dp" />

			<EditText 
			    android:layout_height="wrap_content"
				android:layout_below="@+id/welcomeText" 
				android:layout_alignRight="@+id/welcomeText"
				android:hint="@string/username_hint" 
				android:id="@+id/username"
				android:layout_alignLeft="@+id/welcomeText" 
				android:layout_width="match_parent" />
			<EditText 
			    android:layout_height="wrap_content"
				android:layout_below="@+id/username" 
				android:layout_alignRight="@+id/username"
				android:hint="@string/password_hint" 
				android:id="@+id/password"
				android:inputType="textPassword" 
				android:layout_alignLeft="@+id/username"
				android:layout_width="match_parent" />
			<LinearLayout 
			    android:layout_height="wrap_content"
				android:layout_width="match_parent" 
				android:id="@+id/absoluteLayout1"
				android:layout_below="@+id/password" 
				android:layout_alignRight="@+id/password"
				android:layout_marginTop="40dip"
				android:gravity="right">
				<Button 
				    android:maxWidth="80dip" 
				    android:minWidth="80dip"
					android:layout_height="wrap_content" 
					android:layout_width="wrap_content"
					android:text="@string/login_button" 
					android:id="@+id/loginButton" />
			</LinearLayout>
			<CheckBox 
			    android:layout_height="wrap_content" 
			    android:id="@+id/rememberMeCheck"
				android:layout_below="@+id/password" 
				android:layout_alignLeft="@+id/password"
				android:layout_width="wrap_content" 
				android:text="@string/remember_me_text" />
			<TextView 
			    android:layout_height="wrap_content" 
			    android:id="@+id/ipText"
				android:gravity="center" 
				android:textSize="14sp"
				android:layout_width="wrap_content" 
				android:layout_below="@+id/password"
				android:layout_marginTop="100dp" />
		</RelativeLayout>
	</ScrollView>
</android.support.design.widget.CoordinatorLayout>