<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/disposeTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/dispose_tag_hint"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:minWidth="125dp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/dateDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="date" />

        <Button 
            android:id="@+id/pickDate"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/date_pick_button"
    		android:layout_gravity="center_horizontal" />




        <EditText
            android:id="@+id/disposeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="29.65"
            android:hint="@string/dispose_info_text"
            android:inputType="textMultiLine"
            android:minHeight="120dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/disposeSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dispose_submit_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>
